Refactor openapi.json to include jenjang query parameter
